wrirte request and response functions

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <form name="theForm" class="" action="/search" method="post" id="the-form" autocomplete="off" >
+  
     <h1>Search for a word</h1>
-   <input name = "input" id="inp" type="text"  oninput="theForm.submit()"> 
+   <input name = "input" id="inp" type="text" > 
    
-</form>
-    <div id="results"></div>
 
+    <div id="results"></div>
+<script src="script.js"></script>
 </body>
 </html>
